# interface202305-c3-std-rust

./: .gitignore  README.md  correct.md
add_component/: Cargo.toml  README.md  sdkconfig.defaults
add_component/my_component/: CMakeLists.txt
add_component/my_component/include/: my_component.h
add_component/my_component/src/: my_component.c
add_component/src/: main.rs
attohttpc-example/: Cargo.toml  README.md  build.rs  cfg.toml
attohttpc-example/.cargo/: config.toml
attohttpc-example/src/: main.rs
button/: Cargo.toml  README.md  cfg.toml
button/.cargo/: config.toml
button/examples/: unsafe.rs
button/src/: main.rs
device-basic/: Cargo.toml  README.md  sdkconfig.defaults
device-basic/examples/: bme280.rs  ssd1331.rs  timer.rs
device-basic/src/: main.rs
hello_c3/: Cargo.toml  README.md
hello_c3/src/: main.rs
http-app/: Cargo.toml  README.md  cfg.toml
http-app-separated/: Cargo.toml  README.md  cfg.toml
http-app-separated/.cargo/: config.toml
http-app-separated/client/: Cargo.toml
http-app-separated/client/src/: client.rs  main.rs
http-app-separated/common/: Cargo.toml
http-app-separated/common/src/: lib.rs  sensor_value.rs
http-app-separated/server/: Cargo.toml
http-app-separated/server/src/: main.rs  server.rs
http-app/src/: client.rs  macros.rs  main.rs  mutex.rs  sensor_value.rs  server.rs  wifi.rs
play-std/: Cargo.toml  README.md  sdkconfig.defaults
play-std/examples/: alloc.rs  anyhow.rs  log.rs  sync.rs  thread.rs
play-std/src/: main.rs
std-net/: Cargo.toml  README.md  cfg.toml
std-net/app/: index.html
std-net/src/: main.rs
wifi/: Cargo.toml  README.md  cfg.toml
wifi/src/: main.rs  wifi.rs
