[workspace]
members = [
    "client",
    "server",
    "common",
]

[patch.crates-io]
bme280 = { version = "0.4.4", git = 'https://github.com/tomoyuki-nakabayashi/bme280-rs', branch = 'embedded-hal-1.0.0-alpha.9' }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
