[package]
name = "play-std"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "=0.32", features = ["binstart"] }
esp-idf-svc = "=0.45"
log = "0.4"
anyhow = "1"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
