[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
common = { path = "../common" }
embedded-hal = "=1.0.0-alpha.9"
esp-idf-sys = { version = "=0.32", features = ["binstart"] }
esp-idf-svc = { version="=0.45", features = ["experimental", "alloc"] }
embedded-svc = "0.24"
esp-idf-hal = "0.40.1"
log = "0.4"
anyhow = "1"
toml-cfg = "0.1"
bme280 = "0.4.4"
attohttpc = { version="0.24", default-features = false, features = ["json"] }
serde_json = "1.0"
serde = "1.0"
mutex-trait = "0.2"

[build-dependencies]
embuild = "0.28"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
